--- a/templates/stream_processing_input.html
+++ b/templates/stream_processing_input.html
@@ -370,5 +370,29 @@
       }
     });
 
+    function populateDropdowns(doc) {
+      if (!options || !options.streams) {
+        console.log("options or options.streams is not defined.");
+        return;
+      }
+      for (const key in options.streams) {
+        const dropdown = doc.getElementById(key);
+        if (dropdown) {
+          dropdown.innerHTML = ""; // Clear any existing options
+          console.log("Options:",options.streams);
+          const values = options.streams[key];
+          values.forEach(value => {
+            const opt = document.createElement("option");
+            opt.value = value;
+            opt.textContent = value;
+            dropdown.appendChild(opt);
+          });
+        }
+      }
+    };
+  populateDropdowns(document);
+
+
+
 </script>
 {% endblock map %}
